# Project

./: README.md
client/: CMakeLists.txt  README.txt
client/connection/: client.cpp  client.h
client/scripts/: restartClientServer.sh
client/src/: main.cpp  message.h
clientApplication/: build.sh
